prefer NIO path
GitOrigin-RevId: 4b3e2549590a8638bd6b6bbe9a93e2a2ec6bb7b3