@@ -1,4 +1,4 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.maven.model.impl;
 
 import org.jetbrains.annotations.ApiStatus;
@@ -9,7 +9,6 @@ import org.jetbrains.jps.builders.BuildTargetRegistry;
 import org.jetbrains.jps.builders.TargetOutputIndex;
 import org.jetbrains.jps.builders.java.JavaModuleBuildTargetType;
 import org.jetbrains.jps.builders.storage.BuildDataPaths;
-import org.jetbrains.jps.incremental.CompileContext;
 import org.jetbrains.jps.incremental.JVMModuleBuildTarget;
 import org.jetbrains.jps.incremental.ModuleBuildTarget;
 import org.jetbrains.jps.indices.IgnoredFileIndex;
@@ -19,7 +18,6 @@ import org.jetbrains.jps.maven.model.JpsMavenModuleExtension;
 import org.jetbrains.jps.model.JpsModel;
 import org.jetbrains.jps.model.module.JpsModule;
 
-import java.io.File;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -73,11 +71,6 @@ public final class MavenAnnotationProcessorTarget extends JVMModuleBuildTarget<B
                                                                    @NotNull ModuleExcludeIndex index,
                                                                    @NotNull IgnoredFileIndex ignoredFileIndex,
                                                                    @NotNull BuildDataPaths dataPaths) {
-    return Collections.emptyList();
-  }
-
-  @Override
-  public @NotNull Collection<File> getOutputRoots(@NotNull CompileContext context) {
-    return Collections.emptyList();
+    return List.of();
   }
 }
